--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,10 @@ input[type="radio"].visually-hidden {
   margin: -1px;
   padding: 0;
 
+  white-space: nowrap;
+
   border: 0;
 
-  white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
@@ -129,7 +130,7 @@ input[type="radio"].visually-hidden {
 
   font-size: 17px;
   line-height: 18px;
-  color: #FFFFFF;
+  color: #000000;
   
   background-color: #293449;
   background-image: url("../img/icon-search-1.png"); 
@@ -562,6 +563,7 @@ input[type="radio"].visually-hidden {
 .promo-btn:hover {
   background-color: rgba(0, 0, 0, 0.2);
 }
+
 .promo-btn:hover:active {
   background-color: rgba(0, 0, 0, 0.3);
 }
@@ -623,7 +625,6 @@ input[type="radio"].visually-hidden {
 
   width: 22px;
   height: 40px;
-
   margin-top: -20px;
 
   background-image: url("../img/icon-left.svg");
@@ -906,7 +907,6 @@ input[type="radio"].visually-hidden {
   width: 129px;
   margin: 0 auto;
   margin-bottom: 7px;
-
   padding-top: 7px;
   padding-right: 0px;
   padding-bottom: 7px;
@@ -1014,7 +1014,7 @@ input[type="radio"].visually-hidden {
 }
 
 .producers-img:active {
-  box-shadow: 0 4px 10px 0 rgba(41,52,73,0.50);
+  box-shadow: 0 4px 10px 0 rgba(41, 52, 73, 0.5);
 }
 
 .service {
@@ -1182,7 +1182,6 @@ input[type="radio"].visually-hidden {
   display: flex;
   justify-content: center;
   align-items: center;
-  
   width: 195px;
   margin-top: 26px;
   padding-top: 10px;
@@ -1198,7 +1197,6 @@ input[type="radio"].visually-hidden {
 .company-contacts {
   display: flex;
   justify-content: space-between;
- 
   margin-bottom: 86px;
   padding-top: 26px;
 }
@@ -1447,8 +1445,8 @@ input[type="radio"].visually-hidden {
   width: 133px;
   margin: 0;
   margin-right: 117px;
-  padding: 0;
   margin-left: 155px;
+  padding: 0;
 
   list-style: none;
 }
@@ -1590,6 +1588,7 @@ input[type="radio"].visually-hidden {
 .profile {
   margin-top: 6px;
   padding-left: 18px;
+  padding-right: 18px;
 }
 
 .my-profile {
@@ -2255,19 +2254,109 @@ input[type="radio"].visually-hidden {
   padding: 0;
 }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
 .modal {
   position: fixed;
+
+  display: none;
   
   color: #000000;
 
   background-color: #FFFFFF;
 }
 
+.modal-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 5;
+  
+  width: 21px;
+  height: 21px;
+
+  font-size: 0;
+
+  background-color: transparent;
+  border: 0;
+
+  cursor: pointer;
+}
+
+.modal-close::before,
+.modal-close::after {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  left: 2px;
+
+  width: 19px;
+  height: 3px;
+
+  background-color: #EE3643;
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
+
+.modal-show {
+  display: block;
+
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
+}
+
 .modal-write-us {
   top: 120px;
   left: 50%;
   
-  display: block;
   width: 620px;
   margin: 0;
   margin-left: -320px;
@@ -2277,7 +2366,7 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
 
   border-top: 7px solid #FF5357;
-  box-shadow: 0 20px 40px 0 rgba(0,0,0,0.75);
+  box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.75);
 }
 
 .message {
@@ -2322,6 +2411,7 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
   color: #A9A9A9; 
 }
+
 .write input::-moz-placeholder {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
@@ -2376,44 +2466,6 @@ input[type="radio"].visually-hidden {
   padding-bottom: 10px;
 }
 
-.modal-close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  
-  width: 21px;
-  height: 21px;
-
-  font-size: 0;
-
-  background-color: transparent;
-  border: 0;
-
-  cursor: pointer;
-}
-
-.modal-close::before,
-.modal-close::after {
-  content: "";
-
-  position: absolute;
-  top: 10px;
-  left: 2px;
-
-  width: 19px;
-  height: 3px;
-
-  background-color: #EE3643;
-}
-
-.modal-close::before {
-  transform: rotate(45deg);
-}
-
-.modal-close::after {
-  transform: rotate(-45deg);
-}
-
 .modal-map {
   top: 50%;
   left: 50%;
@@ -2427,12 +2479,18 @@ input[type="radio"].visually-hidden {
   box-shadow: 0 0 14px 1px rgba(47, 42, 43, 0.5);
 }
 
+.modal-map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
+}
+
 .modal-cart {
   top: 120px;
   left: 50%;
   z-index: 100;
   
-  display: block;
   width: 620px;
   margin: 0;
   margin-left: -320px;
@@ -2440,7 +2498,7 @@ input[type="radio"].visually-hidden {
 
   background-color: #FFFFFF;
   border-top: 7px solid #FF5357;
-  box-shadow: 0 20px 40px 0 rgba(0,0,0,0.75);
+  box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.75);
 }
 
 .modal-cart-description {
